remove under construction part and fixed some spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -313,7 +313,8 @@
  }
   #packages_section{margin-top: 100px;
     background-color: rgb(51, 51, 51);
-    padding-bottom: 25px;
+    /* padding-bottom: 50px; */
+    padding-top: 5px;
 }
   #packages{margin-top: 50px;}
 
